# vcv-rack

./: .gitignore  CLAUDE.md  PHILOSOPHY.md  PRODUCT.md  README.md  pyproject.toml
agent/: .env.example  README.md  doctor.py  experiment.py  main.py  narrator-input.json  patch-builder-input.json  patch_tools.py  persona.py  publish_agent.md  publish_agent.py  root_agent.py  run.sh  run_pipeline.sh  scripter-input.json  state.py  telemetry.py  tools.py
contracts/: agentrack.adsr.v1.yaml  agentrack.attenuate.v1.yaml
design/: neural-harmonics-learnings.md  patch-builder-api.md
docs/: agentrack-adsr-contract.md  agentrack-adsr-manifest.md  agentrack-architecture.md  agentrack-attenuate-impl.md  agentrack-concept.md  agentrack-design.md  agentrack-rack-native.md  architecture.html  gotchas.md  module-param-patterns.md  runtime-interaction.md
evals/: __init__.py  eval_cm_chord_seq.py  patch_checks.py  test_adk_patch_builder.py
examples/: __init__.py  analog_synth_voice.py  builder_analog_synth_voice.py  compare_patches.py  lfo_to_vco_square.py  square_to_output.py
patches/: Cassette Demo 1.vcv  Cassette Demo 2.vcv  Cassette Demo 3.vcv  Dub Tech 4 ARM64.vcv  Dub Tech 4.vcv  README.md  __init__.py  agentrack_demo.py  boards.py  buscrush_demo.py  buscrush_demo.vcv  buscrush_demo_v2.vcv  cm7_basic.py  cm7_basic.vcv  cm7_seq.py  cm7_seq.vcv  cm7_seq_kicks.vcv  coltrane.py  dub_cm.py  dub_techno_agentrack.py  dub_techno_agentrack.vcv  dub_techno_chords.py  dub_techno_chords.vcv  dub_techno_rack2.py  dub_techno_seed42_bpm115.vcv  dub_techno_seq.py  dub_techno_seq.vcv  eiirp.py  fix_dub_tech4.py  generate_dub_techno.py  interstellar.py  lfo_vcf_test.py  mutation.py  patch.json  patch_raw  plaits_stabs.py  plaits_stabs.vcv  saphire_demo.py  saphire_test.py  seq16_debug.py  (+6 more)
session/: 260415.md
techniques/: ir-resampling.md
tests/: __init__.py  analog_synth_voice.py  builder_analog_synth_voice.py  cm_chord_seq.py  compare_patches.py  lfo_to_vco_square.py  square_to_output.py  test_layout.py  test_metadata.py  test_patch_tools.py  (+10 more)
(+1273 files in other folders)
